...
//         if (next != null && next) {
//           showDialog(
//             context: context,
//             barrierDismissible: false,
//             builder: (context) {
//               return AlertDialog(
//                 title: Text('Sign Up Successful'),
//                 content: Text(
//                   'Please check your email for verification and verify your account',
//                 ),
//                 actions: [
//                   TextButton(
//                     onPressed: () {
//                       context.pop();
//                       _clearForm();
//                       _navigateToHome();
//                     },
//                     child: Text('OK'),
//                   ),
//                 ],
//               );
//             },
//           );
//         }
...
                    fontWeight: FontWeight.bold,
                  ),
                  textAlign: TextAlign.center,
                ),
                const SizedBox(height: 8.0),
                Text(
                  "Create your account",
                  style: Theme.of(context).textTheme.titleMedium,
                  textAlign: TextAlign.center,
                ),
              ],
            ),
            const SizedBox(height: 24.0),
...
                  selected: _selectedRole == UserType.buyer,
                  onClick: () {
                    setState(() {
                      _selectedRole = UserType.buyer;
                    });
                  },
                  label: "Buyer",
                ),
                ChoiceChipWidget(
                  selected: _selectedRole == UserType.seller,
                  onClick: () {
                    setState(() {
                      _selectedRole = UserType.seller;
...
                style: ElevatedButton.styleFrom(
                  backgroundColor: const Color(0xFF2196F3), // Blue color
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(8.0),
                  ),
                ),
                key: const Key('signUpButton'),
                child: isLoading
                    ? const CircularProgressIndicator(color: Colors.white)
                    : const Text(
                  "Sign up",
                  style: TextStyle(color: Colors.white, fontSize: 16.0),
                ),
...
