...
                    fontWeight: FontWeight.bold,
                  ),
                  textAlign: TextAlign.center,
                ),
                const SizedBox(height: 8),
                Text(
                  "LOG IN TO YOUR ACCOUNT",
                  style: Theme.of(
                    context,
                  ).textTheme.titleMedium?.copyWith(color: Colors.grey[700]),
                  textAlign: TextAlign.center,
                ),
                const SizedBox(height: 24),
...
      if (next != null && next) {
        showDialog(
          context: context,
          barrierDismissible: false,
          builder: (context) {
            return AlertDialog(
              title: Text('Login Successful'),
              content: Text(
                'Please check your email for verification and verify your account',
              ),
              actions: [
                TextButton(
                  onPressed: () {
...
